--- a/InstagramSample/Base.lproj/Main.storyboard
+++ b/InstagramSample/Base.lproj/Main.storyboard
@@ -37,6 +37,9 @@
                                         </view>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="ImQ-m2-mkv"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
